syntax = "proto3";

package telemetry.messages.event;

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.telemetry.event";

import "google/protobuf/timestamp.proto";

message ClimateSensorEventProto {
  int32 temperature_c = 1;
  int32 humidity = 2;
  int32 co2_level = 3;
}

message LightSensorEventProto {
  int32 link_quality = 1;
  int32 luminosity = 2;
}

message MotionSensorEventProto {
  int32 link_quality = 1;
  bool motion = 2;
  int32 voltage = 3;
}

message SwitchSensorEventProto {
  bool state = 1;
}

message TemperatureSensorEventProto {
  int32 temperature_c = 1;
  int32 temperature_f = 2;
}

message SensorEventProto {
  string id = 1;
  string hubId = 2;
  google.protobuf.Timestamp timestamp = 3;
  oneof payload {
    ClimateSensorEventProto climate_sensor_event = 4;
    LightSensorEventProto light_sensor_event = 5;
    MotionSensorEventProto motion_sensor_event = 6;
    SwitchSensorEventProto switch_sensor_event = 7;
    TemperatureSensorEventProto temperature_sensor_event = 8;
  }
}